RESOLVED FIXED279473
CSS font consumers should not eagerly evaluate calc()
https://bugs.webkit.org/show_bug.cgi?id=279473
Summary CSS font consumers should not eagerly evaluate calc()
Sam Weinig
Reported 2024-09-10 15:15:37 PDT
Delay evaluation of calc() for raw font consumers so that each caller can choose the correct behavior for themselves.
Attachments
Sam Weinig
Comment 1 2024-09-10 15:18:58 PDT
EWS
Comment 2 2024-09-12 11:24:51 PDT
Committed 283572@main (64bbc037116b): <https://commits.webkit.org/283572@main> Reviewed commits have been landed. Closing PR #33430 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-12 11:25:26 PDT
EWS
Comment 4 2024-09-30 11:50:16 PDT
Committed 283286.154@safari-7620-branch (b3cedeb06952): <https://commits.webkit.org/283286.154@safari-7620-branch> Reviewed commits have been landed. Closing PR #1865 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.